[tool.poetry]
name = "automation"
version = "0.1.0"
description = "Random collection of tools for automating various workflows"
authors = ["Josh Devins <hi@joshdevins.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notion = "^0.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
